--- a/index.html
+++ b/index.html
@@ -9,16 +9,16 @@
 	<h1>Ligers: Nature's feline unicorn</h1>
 	<hr>
 	<h2>Where do Ligers come from?</h2>
-	<img src="Images/ligers-are-rare.jpg" alt="Liger 1" title="Liger 1">
+	<img src="Images/rare.jpg" alt="Liger 1" title="Liger 1">
 	<h3 style="color:blue">Magic</h3>
 <p>Ligers are the offspring of mating between a female tiger and male lion.</p><strong title="a female tiger and male lion" style="color:red">This is not natural</strong>
 	<hr>
 	<h2>Do they live in the wild?</h2>
-	<img src="Images/liger-facts-china.jpg" alt="Liger in China">
+	<img src="Images/liger.jpg" alt="Liger in China">
 	<p>Since lions and tigers live in two different regions of the world it has <i>never</i> been recorded of them mating in the wild. There are only about <b>100</b> Ligers in the world, all which are kept in zoos or natural reserves.</p>
 	<hr>
 	<h2>Where can I see a Liger?</h2>
-	<img src="Images/Hercules-Liger-1046x766.png" alt="Liger 3" title="Hercules The Liger">
+	<img src="Images/hercules.png" alt="Liger 3" title="Hercules The Liger">
 	<p>You may recognize him from Netflixs' <b><i>'Tiger King'</i></b>, Doc Antle has a safari open to the public in <i>Myrtle Beach, SC</i> where you can visit his liger Hercules and many more <em>wild animals.</em></p>
 </body>
 </html>
