--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 	<p>Since lions and tigers live in two different regions of the world it has <i>never</i> been recorded of them mating in the wild. There are only about <b>100</b> Ligers in the world, all which are kept in zoos or natural reserves.</p>
 	<hr>
 	<h2>Where can I see a Liger?</h2>
-	<img src="Images/hercules.png" alt="Liger 3" title="Hercules The Liger">
+	<img src="Images/hercules.png" alt="Liger 3" width:100px; length:200px title="Hercules The Liger">
 	<p>You may recognize him from Netflixs' <b><i>'Tiger King'</i></b>, Doc Antle has a safari open to the public in <i>Myrtle Beach, SC</i> where you can visit his liger Hercules and many more <em>wild animals.</em></p>
 </body>
 </html>
